# barbossa-dev

./: .dockerignore  .env.example  .env.personal_assistant  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRON_ENABLED_STATUS.md  DASHBOARD_REFACTOR_COMPLETE.md  DASHBOARD_V2_IMPROVEMENTS.md  DEPLOYMENT_STATUS.md  Dockerfile  ENHANCED_BARBOSSA_SUMMARY.md  ENHANCEMENTS.md  ESSENTIAL_FEATURES_UPDATE_REPORT.md  ESSENTIAL_FEATURE_UPDATES_REPORT.md  LIVE_MODE_ACTIVE.md  LIVE_SYSTEMS_STATUS.md  PERFORMANCE_OPTIMIZATIONS.md  PERSONAL_ASSISTANT_FINAL.md  PERSONAL_ASSISTANT_IMPROVEMENTS.md  PERSONAL_ASSISTANT_README.md  PR_DESCRIPTION.md  README.md  SECURITY.md  UPGRADE_SUMMARY.md  V3_IMPROVEMENTS_SUMMARY.md  V4_STATE_TRACKING_SUMMARY.md  WEB_PORTAL_STATUS.md  apply_security_updates.sh  audit_history.json  barbossa.py  barbossa_auditor.py  barbossa_discovery.py  barbossa_engineer.py  barbossa_enhanced.py  barbossa_firebase.py  barbossa_personal_assistant_v3.py  barbossa_personal_assistant_v4.py  (+62 more)
.github/: PULL_REQUEST_TEMPLATE.md
backup_before_cleanup/: app.py  dashboard.html  setup_cron.sh
changelogs/: barbossa_self_20250810_120022.md  infrastructure_20250810_000033.md  infrastructure_20250810_160011.md  infrastructure_20250810_160045.md  infrastructure_cloudflared_fix_20250810_000500.md  personal_projects_20250809_152602.md  personal_projects_20250809_160039.md  personal_projects_20250810_093050.md
config/: README.md  barbossa.example.json  barbossa.schema.json  personal_assistant_config.json  repositories.advanced.json.example  repositories.json  (+5 more)
(+238 files in other folders)
